--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <!-- About -->
         <section>
             <h2>About</h2>
-            <p>I help international companies—particularly from the U.S.—expand into Canada. Over the past seven years at Toronto Global, I've guided more than 100 companies through the process: market entry strategy, site selection, talent access, regulatory navigation, partnership building. The work is part advisor, part fixer, part translator between business cultures.</p>
+            <p>I help international companies — particularly from the U.S. and Europe — expand into Canada. Over the past seven years at Toronto Global, I've guided more than 100 companies through the process: market entry strategy, site selection, talent access, regulatory navigation, partnership building. The work is part advisor, part fixer, part translator between business cultures.</p>
             
             <div class="stats">
                 <div class="stat">
@@ -353,8 +353,8 @@
                 </div>
             </div>
 
-            <p>Before Toronto Global, I spent four years managing research partnerships at Toronto Metropolitan University and five years as a Senior Policy Advisor with the Ontario government. The through-line has been connecting people and institutions across boundaries—whether that's government and industry, academia and startups, or Canadian and American business cultures.</p>
-            <p>I studied at the University of Toronto and hold a Master of Design in Strategic Foresight and Innovation from OCAD University. I speak English, Mandarin, and Armenian.</p>
+            <p>Before Toronto Global, I spent four years managing research partnerships at Toronto Metropolitan University and five years as a Senior Policy Advisor with the Ontario government. The through-line has been connecting people and institutions across boundaries—whether that's government and industry, academia and startups, or different business cultures.</p>
+            <p>I studied at the University of Toronto and hold a Master of Design in Strategic Foresight and Innovation from OCAD University. I speak English, and partial Armenian and Mandarin.</p>
         </section>
 
         <!-- Current Work -->
@@ -362,8 +362,8 @@
             <h2>Current Work</h2>
             
             <div class="project">
-                <h3>Growth Advisory & Stakeholder Orchestration</h3>
-                <p>At Toronto Global, I work directly with company leadership teams navigating critical expansion decisions—market entry, talent strategy, site selection, incentive optimization, regulatory positioning. This isn't just relocation logistics; it's strategic advisory during high-stakes growth phases, where the right connections and sequencing materially affect outcomes.</p>
+                <h3>International Growth Advisory & Stakeholder Orchestration</h3>
+                <p>At Toronto Global, I work directly with company leadership teams navigating critical expansion decisions—market entry, talent strategy, site selection, incentive optimization, regulatory positioning. This isn't just logistics; it's strategic advisory during high-stakes growth phases, where the right connections and sequencing materially affect outcomes.</p>
                 <p>Much of the value I provide is orchestration: connecting companies to the right people across government, capital markets, academia, and industry at the right moments. I've supported companies like Cerebras, Harvey AI, and Databricks, along with dozens of growth-stage startups establishing their first international presence. The work requires reading organizational needs quickly, navigating complex stakeholder environments, and delivering certainty when there's pressure to move fast.</p>
             </div>
 
