--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <h2>Writing</h2>
             
             <div class="writing-category">
-                <h3>Strategic</h3>
+                <h3>Professional</h3>
                 
                 <div class="writing-item">
                     <div class="writing-item-header"><a href="building-a-stronger-dominion.pdf">Building a Stronger Dominion: A Mission for Canadian Renewal</a></div>
