--- a/index.html
+++ b/index.html
@@ -368,18 +368,21 @@
             </div>
 
             <div class="project">
-                <h3><a href="https://www.linkedin.com/feed/update/urn:li:activity:7366825174609887232/" style="color: inherit; text-decoration: none;">Defence Technology and National Security</a></h3>
+                <h3>Defence Technology and National Security</h3>
                 <p>Outside my role at Toronto Global, I've been building connections across Canada's defence, technology, and investment ecosystem. Through curated dinners and conversations, I bring together founders, investors, veterans, and policy leaders to explore how Canadian talent and industrial capacity can be mobilized for national resilience. This work reflects a personal thesis: that Canada has the inputs—talent, resources, institutions—to build strategic capacity in dual-use technology, but lacks the mechanisms to convert those inputs into outcomes.</p>
+                <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:7366825174609887232/" class="toggle-link" target="_blank">See more</a></p>
             </div>
 
             <div class="project">
-                <h3><a href="https://www.linkedin.com/feed/update/urn:li:activity:7289673554197950465/" style="color: inherit; text-decoration: none;">Pancake Networking</a></h3>
+                <h3>Pancake Networking</h3>
                 <p>Sometimes the best business conversations happen over breakfast. Instead of formal networking events with badges and elevator pitches, we gather over good food and real talk—entrepreneurs, investors, operators discussing what they're actually working on. Also, I genuinely love pancakes, and this is my professional excuse to eat them regularly.</p>
+                <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:7289673554197950465/" class="toggle-link" target="_blank">See more</a></p>
             </div>
 
             <div class="project">
-                <h3><a href="https://www.youtube.com/watch?v=88nDCIqVZjA" style="color: inherit; text-decoration: none;">Boardroom Briefs</a></h3>
+                <h3>Boardroom Briefs</h3>
                 <p>An interview series where I sit down with business leaders, policymakers, and industry experts to break down complex topics—trade policy, economic strategy, market dynamics—into insights that matter for decision-makers. Each conversation tackles something specific and timely.</p>
+                <p><a href="https://www.youtube.com/watch?v=88nDCIqVZjA" class="toggle-link" target="_blank">See more</a></p>
             </div>
         </section>
 
@@ -537,10 +540,11 @@
                     <h4>Tech Match Game</h4>
                     <p>Test your memory matching companies I've helped expand into the Toronto Region.</p>
                 </a>
-                <a href="https://www.linkedin.com/posts/michael-keoshkerian_sanfrancisco-bayarea-maplesyrupstayswithme-activity-7242495193315229696-wj3_" class="fun-item">
+                <div class="fun-item">
                     <h4>Bay Area Adventures</h4>
                     <p>An entirely accurate portrayal of my business development trips to San Francisco.</p>
-                </a>
+                    <p style="margin-top: 8px;"><a href="https://www.linkedin.com/posts/michael-keoshkerian_sanfrancisco-bayarea-maplesyrupstayswithme-activity-7242495193315229696-wj3_" class="toggle-link" target="_blank">See more</a></p>
+                </div>
             </div>
         </section>
 
