--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="writing-item">
                     <div class="writing-item-header">The Work of Getting Up</div>
                     <p class="preview">On being stuck and choosing to move yourself.</p>
-                    <a class="toggle-link" onclick="toggleEssay('motorcycle')">Read more</a>
+                    <a href="javascript:void(0);" class="toggle-link" onclick="toggleEssay('motorcycle')">Read more</a>
                     <div id="motorcycle" class="essay-content">
                         <p>About one month ago, I fell off my motorcycle. Well, fell off is not the most accurate way to put it. Neither is dropped or crashed. I guess I could say I fell with my motorcycle, ending up underneath it.</p>
                         <p>I was riding up in Northern Ontario. The air was super crisp and the skies were clear. There's nothing like cruising through the side roads smelling the nearby forests.</p>
@@ -458,7 +458,7 @@
                 <div class="writing-item">
                     <div class="writing-item-header">Easy Friendships, Heavy Burdens</div>
                     <p class="preview">Persona fatigue, and why real relationships are the long game.</p>
-                    <a class="toggle-link" onclick="toggleEssay('friendships')">Read more</a>
+                    <a href="javascript:void(0);" class="toggle-link" onclick="toggleEssay('friendships')">Read more</a>
                     <div id="friendships" class="essay-content">
                         <p>When I started working at Canadian Tire—my first real job—I ended up shadowing this guy named Kevin. He wasn't management, but he ran the floor like it was his. Everyone liked him. He always had a joke ready, remembered customers' names, and could charm a frustrated senior into buying the wrong socket wrench and thanking him for it.</p>
                         <p>But here's the thing: Kevin didn't actually know that much about tools. He'd ask me questions about SKUs that I, a 17-year-old barely trained seasonal hire, had to guess my way through. But it didn't matter. Kevin understood people—and in retail, that's 90% of the job.</p>
@@ -488,7 +488,7 @@
                 <div class="writing-item">
                     <div class="writing-item-header">The Quiet Permission of Walkabouts</div>
                     <p class="preview">On stepping away to return to yourself.</p>
-                    <a class="toggle-link" onclick="toggleEssay('walkabouts')">Read more</a>
+                    <a href="javascript:void(0);" class="toggle-link" onclick="toggleEssay('walkabouts')">Read more</a>
                     <div id="walkabouts" class="essay-content">
                         <p>I've always needed a way to quietly leave. Not escape—just reset. This piece is about the walkabouts I take when I need to be nobody for a little while. Not a productivity hack. Not a routine. Just a quiet return to myself.</p>
                         <p>There's a certain rhythm I've had to relearn—one that isn't scheduled, optimized, or announced. It's not something I talk about often, because it doesn't lend itself to a calendar invite or a thread. But it's shaped everything that matters.</p>
@@ -515,7 +515,7 @@
                 <div class="writing-item">
                     <div class="writing-item-header">The Strength in Seeing</div>
                     <p class="preview">Small moments of care that shape us.</p>
-                    <a class="toggle-link" onclick="toggleEssay('seeing')">Read more</a>
+                    <a href="javascript:void(0);" class="toggle-link" onclick="toggleEssay('seeing')">Read more</a>
                     <div id="seeing" class="essay-content">
                         <p>Every so often, you catch it. Someone close to breaking. It's not loud or dramatic. There's no scene. Just a small fracture at the edge of their face, the kind we've all carried at some point. They might be sitting a little too still, or speaking in a tone that feels almost too careful, as if any sudden movement might cause the whole thing to crack open.</p>
                         <p>It's subtle enough that you could miss it entirely if you weren't paying attention. And most people do.</p>
