--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             <h2>Contact</h2>
             <div class="contact-links">
                 <a href="https://www.linkedin.com/in/michael-keoshkerian/">LinkedIn</a>
-                <a href="/cdn-cgi/l/email-protection#ed80848e858c8881c38688829e8586889f848c83ad8a808c8481c38e8280">Email</a>
+                <a href="mailto:michael.keoshkerian@gmail.com">Email</a>
             </div>
         </section>
 
@@ -583,3 +583,11 @@
             if (content.style.display === 'none' || content.style.display === '') {
                 content.style.display = 'block';
                 link.textContent = 'Read less';
+                       } else {
+                content.style.display = 'none';
+                link.textContent = 'Read more';
+            }
+        }
+    </script>
+</body>
+</html>
